--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       let clone = document.querySelector("div.template").cloneNode(true);
       clone.classList.remove("template");
       console.log(myJson.results);
-      clone.querySelector("h2.demo-card__title").textContent = myJson.results[0].nat + " " + myJson.results[0].name.title + " " + myJson.results[0].name.first + " " + myJson.results[0].name.last;
+      clone.querySelector("h2.demo-card__title").textContent = myJson.results[0].nat + " " + " " + myJson.results[0].login.uuid;
+      clone.querySelector("h3.demo-card__subtitle").textContent = myJson.results[0].name.title + " " + myJson.results[0].name.last + " " + myJson.results[0].name.first;
       document.body.appendChild(clone);
     });
 
