--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       console.log(myJson.results);
       clone.querySelector("h2.demo-card__title").textContent = myJson.results[0].nat + " " + " " + myJson.results[0].login.uuid;
       clone.querySelector("h3.demo-card__subtitle").textContent = myJson.results[0].name.title + " " + myJson.results[0].name.last + " " + myJson.results[0].name.first;
+      let theirPic = myJson.results[0].picture.large;
+      clone.querySelector("div.mdc-card__media").style.backgroundImage = 'url("'+theirPic+'")';
       document.body.appendChild(clone);
     });
 
